<?xml version="1.0"?>
<package format="2">
  <name>max_slam</name>
  <version>0.0.0</version>
  <description>The max_slam package</description>

  <maintainer email="maxjiever13@gmail.com">jiawen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>ndt_omp</build_depend>  <!-- 添加依赖项,保证可以找到库 -->
  <exec_depend>ndt_omp</exec_depend>

  <build_depend>linefit_ground_segmentation</build_depend> 
  <exec_depend>linefit_ground_segmentation</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>GTSAM</build_depend>
  <exec_depend>GTSAM</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
